--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "AskNico",
+  "name": "nicoai-web",
   "version": "1.0.0",
-  "description": "A website for an ai assistant ",
-  "main": "script.js",
+  "description": "NicoAi web with interactive starry animation and AI functionalities.",
+  "main": "index.html",
   "scripts": {
-    "start": "node script.js",
-    "dev": "nodemon script.js"
-  },
-  "dependencies": {
-    "axios": "^1.4.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
+    "start": "live-server --port=8080",
+    "build": "echo 'No build script defined yet'"
   },
   "author": "Amiel Nico Diosa",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {},
+  "devDependencies": {
+    "live-server": "^1.2.1"
+  }
 }
