--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nicoai-web",
   "version": "1.0.0",
   "description": "NicoAi web with interactive starry animation and AI functionalities.",
-  "main": "index.html",
+  "main": "cleo.html",
   "scripts": {
     "start": "live-server --port=8080",
     "build": "echo 'No build script defined yet'"
